Fix board shifting on each move.

--- a/src/components/game/Game.css
+++ b/src/components/game/Game.css
@@ -8,6 +8,7 @@
 
 .game-info {
     margin-left: 20px;
+    width: 200px;
 }
 
 
